firmware: arm_scpi: Ensure scpi_info is not assigned if the probe fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13112,6 +13112,7 @@
 	patches.suse/soc-renesas-r8a779a0-sysc-Fix-A2DP1-and-A2CV-2357-PD.patch
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
 	patches.suse/soc-amlogic-Fix-refcount-leak-in-meson-secure-pwrc.c.patch
+	patches.suse/firmware-arm_scpi-Ensure-scpi_info-is-not-assigned-i.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
 	patches.suse/soc-qcom-aoss-Fix-refcount-leak-in-qmp_cooling_devic.patch
