drm/mediatek: Modify dsi funcs to atomic operations (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13277,6 +13277,7 @@
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
+	patches.suse/drm-mediatek-Modify-dsi-funcs-to-atomic-operations.patch
 	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
