dt-bindings: iio: accel: Add DT binding doc for ADXL355 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6335,6 +6335,7 @@
 	patches.suse/pvpanic-Fix-typos-in-the-comments.patch
 	patches.suse/binder-don-t-detect-sender-target-during-buffer-clea.patch
 	patches.suse/char-xillybus-fix-msg_ep-UAF-in-xillyusb_probe.patch
+	patches.suse/dt-bindings-iio-accel-Add-DT-binding-doc-for-ADXL355.patch
 	patches.suse/iio-st_sensors-disable-regulators-after-device-unreg.patch
 	patches.suse/iio-ad5770r-make-devicetree-property-reading-consist.patch
 	patches.suse/dt-bindings-iio-magnetometer-asahi-kasei-ak8975-add-.patch
