drm/msm/dpu: Fix for non-visible planes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13286,6 +13286,7 @@
 	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
 	patches.suse/drm-msm-hdmi-drop-empty-none-regulator-lists.patch
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
+	patches.suse/drm-msm-dpu-Fix-for-non-visible-planes.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-nouveau-kms-Fix-failure-path-for-creating-DP-con.patch
 	patches.suse/drm-nouveau-acpi-Don-t-print-error-when-we-get-EINPR.patch
