drm/mediatek: Keep dsi as LP00 before dcs cmds transfer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13279,6 +13279,7 @@
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
 	patches.suse/drm-mediatek-Modify-dsi-funcs-to-atomic-operations.patch
 	patches.suse/drm-mediatek-Separate-poweron-poweroff-from-enable-d.patch
+	patches.suse/drm-mediatek-Keep-dsi-as-LP00-before-dcs-cmds-transf.patch
 	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
