--- a/series.conf
+++ b/series.conf
@@ -13265,6 +13265,7 @@
 	patches.suse/drm-vc4-dsi-Register-dsi0-as-the-correct-vc4-encoder.patch
 	patches.suse/drm-vc4-dsi-Fix-dsi0-interrupt-support.patch
 	patches.suse/drm-vc4-dsi-Add-correct-stop-condition-to-vc4_dsi_en.patch
+	patches.suse/drm-vc4-hdmi-Disable-audio-if-dmas-property-is-prese.patch
 	patches.suse/drm-vc4-hdmi-Reset-HDMI-MISC_CONTROL-register.patch
 	patches.suse/drm-vc4-hdmi-Fix-timings-for-interlaced-modes.patch
 	patches.suse/drm-vc4-hdmi-Correct-HDMI-timing-registers-for-inter.patch
