--- a/series.conf
+++ b/series.conf
@@ -8149,6 +8149,7 @@
 	patches.suse/media-dmxdev-fix-UAF-when-dvb_register_device-fails.patch
 	patches.suse/media-b2c2-Add-missing-check-in-flexcop_pci_isr.patch
 	patches.suse/media-dib0700-fix-undefined-behavior-in-tuner-shutdo.patch
+	patches.suse/media-hantro-postproc-Fix-motion-vector-space-size.patch
 	patches.suse/media-i2c-imx274-fix-s_frame_interval-runtime-resume.patch
 	patches.suse/media-i2c-imx274-fix-trivial-typo-expsoure-exposure.patch
 	patches.suse/media-i2c-imx274-fix-trivial-typo-obainted-obtained.patch
