media: imx-jpeg: use NV12M to represent non contiguous NV12 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10330,6 +10330,7 @@
 	patches.suse/media-davinci-vpif-fix-unbalanced-runtime-PM-get.patch
 	patches.suse/media-davinci-vpif-fix-unbalanced-runtime-PM-enable.patch
 	patches.suse/media-davinci-vpif-fix-use-after-free-on-driver-unbi.patch
+	patches.suse/media-imx-jpeg-use-NV12M-to-represent-non-contiguous.patch
 	patches.suse/media-bttv-fix-WARNING-regression-on-tunerless-devic.patch
 	patches.suse/media-atmel-atmel-sama7g5-isc-fix-ispck-leftover.patch
 	patches.suse/media-atmel-atmel-isc-base-report-frame-sizes-as-ful.patch
