HID: hid-input: add Surface Go battery quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13409,6 +13409,7 @@
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
+	patches.suse/HID-hid-input-add-Surface-Go-battery-quirk.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
