--- a/series.conf
+++ b/series.conf
@@ -13306,6 +13306,7 @@
 	patches.suse/intel_th-Fix-a-resource-leak-in-an-error-handling-pa.patch
 	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
 	patches.suse/intel_th-msu-Fix-vmalloced-buffers.patch
+	patches.suse/intel_th-pci-Add-Meteor-Lake-P-support.patch
 	patches.suse/iio-accel-bma400-Fix-the-scale-min-and-max-macro-val.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
