--- a/series.conf
+++ b/series.conf
@@ -10334,6 +10334,7 @@
 	patches.suse/media-bttv-fix-WARNING-regression-on-tunerless-devic.patch
 	patches.suse/media-atmel-atmel-sama7g5-isc-fix-ispck-leftover.patch
 	patches.suse/media-atmel-atmel-isc-base-report-frame-sizes-as-ful.patch
+	patches.suse/media-hevc-Embedded-indexes-in-RPS.patch
 	patches.suse/media-ir_toy-free-before-error-exiting.patch
 	patches.suse/media-i2c-max9286-Use-maxim-gpio-poc-property.patch
 	patches.suse/media-coda-Fix-missing-put_device-call-in-coda_get_v.patch
