--- a/series.conf
+++ b/series.conf
@@ -5002,6 +5002,7 @@
 	patches.suse/media-usb-dvd-usb-fix-uninit-value-bug-in-dibusb_rea.patch
 	patches.suse/media-vidtv-move-kfree-dvb-to-vidtv_bridge_dev_relea.patch
 	patches.suse/media-videobuf2-always-set-buffer-vb2-pointer.patch
+	patches.suse/media-imx-jpeg-Add-pm-runtime-support-for-imx-jpeg.patch
 	patches.suse/media-rkvdec-Do-not-override-sizeimage-for-output-fo.patch
 	patches.suse/media-rkvdec-Support-dynamic-resolution-changes.patch
 	patches.suse/media-ivtv-fix-build-for-UML.patch
