hwmon: (sht15) Fix wrong assumptions in device remove callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13160,6 +13160,7 @@
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
 	patches.suse/hwmon-dell-smm-Add-Dell-XPS-13-7390-to-fan-control-w.patch
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
+	patches.suse/hwmon-sht15-Fix-wrong-assumptions-in-device-remove-c.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-processor-idle-Annotate-more-functions-to-live-.patch
