hwmon: (dell-smm) Add Dell XPS 13 7390 to fan control whitelist (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13158,6 +13158,7 @@
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
+	patches.suse/hwmon-dell-smm-Add-Dell-XPS-13-7390-to-fan-control-w.patch
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
