HID: alps: Declare U1_UNICORN_LEGACY support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13412,6 +13412,7 @@
 	patches.suse/HID-hid-input-add-Surface-Go-battery-quirk.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
+	patches.suse/HID-alps-Declare-U1_UNICORN_LEGACY-support.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
 	patches.suse/HID-amd_sfh-Handle-condition-of-no-sensors.patch
 	patches.suse/platform-chrome-cros_ec-Always-expose-last-resume-re.patch
