--- a/series.conf
+++ b/series.conf
@@ -13310,6 +13310,7 @@
 	patches.suse/intel_th-pci-Add-Raptor-Lake-S-PCH-support.patch
 	patches.suse/intel_th-pci-Add-Raptor-Lake-S-CPU-support.patch
 	patches.suse/iio-accel-bma400-Fix-the-scale-min-and-max-macro-val.patch
+	patches.suse/iio-accel-bma400-Reordering-of-header-files.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
