--- a/series.conf
+++ b/series.conf
@@ -7687,6 +7687,7 @@
 	patches.suse/mac80211-track-only-QoS-data-frames-for-admission-co.patch
 	patches.suse/mac80211-fix-rate-control-for-retransmitted-frames.patch
 	patches.suse/mac80211-fix-regression-in-SSN-handling-of-addba-tx.patch
+	patches.suse/mac80211-fix-a-memory-leak-where-sta_info-is-not-fre.patch
 	patches.suse/mac80211-send-ADDBA-requests-using-the-tid-queue-of-.patch
 	patches.suse/mac80211-agg-tx-don-t-schedule_and_wake_txq-under-st.patch
 	patches.suse/cfg80211-Acquire-wiphy-mutex-on-regulatory-work.patch
