--- a/series.conf
+++ b/series.conf
@@ -13164,6 +13164,7 @@
 	patches.suse/regulator-qcom_smd-Fix-pm8916_pldo-range.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
 	patches.suse/spi-spi-altera-dfl-Fix-an-error-handling-path.patch
+	patches.suse/spi-synquacer-Add-missing-clk_disable_unprepare.patch
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
