serial: 8250_pci: Replace dev_*() by pci_*() macros (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6433,6 +6433,7 @@
 	patches.suse/serial-imx-fix-detach-attach-of-serial-console.patch
 	patches.suse/serial-8250-fix-racy-uartclk-update.patch
 	patches.suse/serial-8250_pci-Refactor-the-loop-in-pci_ite887x_ini.patch
+	patches.suse/serial-8250_pci-Replace-dev_-by-pci_-macros.patch
 	patches.suse/serial-xilinx_uartps-Fix-race-condition-causing-stuc.patch
 	patches.suse/serial-cpm_uart-Protect-udbg-definitions-by-CONFIG_S.patch
 	patches.suse/iommu-mediatek-Fix-out-of-range-warning-with-clang.patch
