serial: 8250: Fold EndRun device support into OxSemi Tornado code (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12494,6 +12494,7 @@
 	patches.suse/sysrq-do-not-omit-current-cpu-when-showing-backtrace.patch
 	patches.suse/serial-8250-core-Remove-unneeded-linux-pm_runtime.h.patch
 	patches.suse/serial-8250-pxa-Remove-unneeded-linux-pm_runtime.h.patch
+	patches.suse/serial-8250-Fold-EndRun-device-support-into-OxSemi-T.patch
 	patches.suse/serial-sifive-Report-actual-baud-base-rather-than-fi.patch
 	patches.suse/serial-pch-don-t-overwrite-xmit-buf-0-by-x_char.patch
 	patches.suse/tty-n_gsm-Fix-packet-data-hex-dump-output.patch
