--- a/series.conf
+++ b/series.conf
@@ -13630,6 +13630,7 @@
 	patches.suse/tty-n_gsm-fix-missing-corner-cases-in-gsmld_poll.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
+	patches.suse/serial-mvebu-uart-uart2-error-bits-clearing.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/watchdog-sp5100_tco-Fix-a-memory-leak-of-EFCH-MMIO-r.patch
