--- a/series.conf
+++ b/series.conf
@@ -13168,6 +13168,7 @@
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
+	patches.suse/pwm-lpc18xx-Fix-period-handling.patch
 	patches.suse/hwmon-dell-smm-Add-Dell-XPS-13-7390-to-fan-control-w.patch
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
 	patches.suse/hwmon-sht15-Fix-wrong-assumptions-in-device-remove-c.patch
