soc: qcom: Make QCOM_RPMPD depend on PM (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13131,6 +13131,7 @@
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
 	patches.suse/soc-qcom-aoss-Fix-refcount-leak-in-qmp_cooling_devic.patch
+	patches.suse/soc-qcom-Make-QCOM_RPMPD-depend-on-PM.patch
 	patches.suse/arm64-dts-renesas-beacon-Fix-regulator-node-names.patch
 	patches.suse/arm64-dts-renesas-Fix-thermal-sensors-on-single-zone.patch
 	patches.suse/ARM-dts-ast2500-evb-fix-board-compatible.patch
