--- a/series.conf
+++ b/series.conf
@@ -11191,6 +11191,7 @@
 	patches.suse/dmaengine-hisi_dma-fix-MSI-allocate-fail-when-reload.patch
 	patches.suse/pwm-lpc18xx-sct-Initialize-driver-data-and-hardware-.patch
 	patches.suse/pwm-lpc18xx-sct-Reduce-number-of-devm-memory-allocat.patch
+	patches.suse/pwm-lpc18xx-sct-Simplify-driver-by-not-using-pwm_-gs.patch
 	patches.suse/crypto-arm-aes-neonbs-cbc-Select-generic-cbc-and-aes.patch
 	patches.suse/crypto-stm32-fix-reference-leak-in-stm32_crc_remove.patch
 	patches.suse/crypto-x86-chacha20-Avoid-spurious-jumps-to-other-fu.patch
