wifi: mac80211_hwsim: fix race condition in pending packet (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13221,6 +13221,7 @@
 	patches.suse/wifi-iwlegacy-4965-fix-potential-off-by-one-overflow.patch
 	patches.suse/wifi-rtw89-8852a-rfk-fix-div-0-exception.patch
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
+	patches.suse/wifi-mac80211_hwsim-fix-race-condition-in-pending-pa.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
