tty: vt: initialize unicode screen buffer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13641,6 +13641,7 @@
 	patches.suse/tty-n_gsm-fix-missing-corner-cases-in-gsmld_poll.patch
 	patches.suse/tty-8250-Add-support-for-Brainboxes-PX-cards.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
+	patches.suse/tty-vt-initialize-unicode-screen-buffer.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
 	patches.suse/serial-mvebu-uart-uart2-error-bits-clearing.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
