usb: dwc3: core: Deprecate GCTL.CORESOFTRESET (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13414,6 +13414,7 @@
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
 	patches.suse/usb-gadget-tegra-xudc-Fix-error-check-in-tegra_xudc_.patch
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
+	patches.suse/usb-dwc3-core-Deprecate-GCTL.CORESOFTRESET.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/usb-dwc3-gadget-refactor-dwc3_repare_one_trb.patch
