--- a/series.conf
+++ b/series.conf
@@ -12030,6 +12030,7 @@
 	patches.suse/ath10k-skip-ath10k_halt-during-suspend-for-driver-st.patch
 	patches.suse/carl9170-tx-fix-an-incorrect-use-of-list-iterator.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
+	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
