usb: dwc3: core: Do not perform GCTL_CORE_SOFTRESET during bootup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13421,6 +13421,7 @@
 	patches.suse/usb-dwc3-gadget-fix-high-speed-multiplier-setting.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
 	patches.suse/usb-aspeed-vhub-Fix-refcount-leak-bug-in-ast_vhub_in.patch
+	patches.suse/usb-dwc3-core-Do-not-perform-GCTL_CORE_SOFTRESET-dur.patch
 	patches.suse/usb-dwc3-qcom-fix-missing-optional-irq-warnings.patch
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-cdns3-change-place-of-priv_ep-assignment-in-cdns.patch
