tty: 8250: Add support for Brainboxes PX cards (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13639,6 +13639,7 @@
 	patches.suse/tty-n_gsm-fix-DM-command.patch
 	patches.suse/tty-n_gsm-fix-flow-control-handling-in-tx-path.patch
 	patches.suse/tty-n_gsm-fix-missing-corner-cases-in-gsmld_poll.patch
+	patches.suse/tty-8250-Add-support-for-Brainboxes-PX-cards.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
 	patches.suse/serial-mvebu-uart-uart2-error-bits-clearing.patch
