spi: tegra20-slink: fix UAF in tegra_slink_remove() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13171,6 +13171,7 @@
 	patches.suse/spi-dt-bindings-cadence-add-missing-required.patch
 	patches.suse/spi-dt-bindings-zynqmp-qspi-add-missing-required.patch
 	patches.suse/spi-Fix-simplification-of-devm_spi_register_controll.patch
+	patches.suse/spi-tegra20-slink-fix-UAF-in-tegra_slink_remove.patch
 	patches.suse/pwm-lpc18xx-Fix-period-handling.patch
 	patches.suse/hwmon-dell-smm-Add-Dell-XPS-13-7390-to-fan-control-w.patch
 	patches.suse/hwmon-drivetemp-Add-module-alias.patch
