drm/vc4: change vc4_dma_range_matches from a global to static (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13306,6 +13306,7 @@
 	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
 	patches.suse/drm-amd-display-Revert-drm-amd-display-turn-DPMS-off.patch
 	patches.suse/drm-amd-amd_shared.h-Add-missing-doc-for-PP_GFX_DCS_.patch
+	patches.suse/drm-vc4-change-vc4_dma_range_matches-from-a-global-t.patch
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
 	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
