net: phy: smsc: Disable Energy Detect Power-Down in interrupt mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12741,6 +12741,7 @@
 	patches.suse/mmc-mediatek-wait-dma-stop-bit-reset-to-0.patch
 	patches.suse/phy-aquantia-Fix-AN-when-higher-speeds-than-1G-are-n.patch
 	patches.suse/0001-ethtool-Fix-get-module-eeprom-fallback.patch
+	patches.suse/net-phy-smsc-Disable-Energy-Detect-Power-Down-in-int.patch
 	patches.suse/selftests-netfilter-correct-PKTGEN_SCRIPT_PATHS-in-n.patch
 	patches.suse/virtio_net-fix-xdp_rxq_info-bug-after-suspend-resume.patch
 	patches.suse/ata-libata-add-qc-flags-in-ata_qc_complete_template-.patch
