crypto: sun8i-ss - fix error codes in allocate_flows() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13196,6 +13196,7 @@
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
+	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
 	patches.suse/crypto-ccp-During-shutdown-check-SEV-data-pointer-be.patch
 	patches.suse/crypto-hisilicon-sec-don-t-sleep-when-in-softirq.patch
