--- a/series.conf
+++ b/series.conf
@@ -13274,6 +13274,7 @@
 	patches.suse/media-tw686x-Register-the-irq-at-the-end-of-probe.patch
 	patches.suse/media-hdpvr-fix-error-value-returns-in-hdpvr_read.patch
 	patches.suse/media-v4l2-mem2mem-prevent-pollerr-when-last_buffer_.patch
+	patches.suse/media-driver-nxp-imx-jpeg-fix-a-unexpected-return-va.patch
 	patches.suse/media-tw686x-Fix-memory-leak-in-tw686x_video_init.patch
 	patches.suse/media-PATCH-pci-atomisp_cmd-fix-three-missing-checks.patch
 	patches.suse/media-cedrus-h265-Fix-flag-name.patch
