--- a/series.conf
+++ b/series.conf
@@ -12962,6 +12962,7 @@
 	patches.suse/drm-panfrost-Put-mapping-instead-of-shmem-obj-on-pan.patch
 	patches.suse/drm-panfrost-Fix-shrinker-list-corruption-by-madvise.patch
 	patches.suse/tracing-histograms-Fix-memory-leak-problem.patch
+	patches.suse/tracing-Fix-sleeping-while-atomic-in-kdb-ftdump.patch
 	patches.suse/ASoC-sgtl5000-Fix-noise-on-shutdown-remove.patch
 	patches.suse/ASoC-tas2764-Add-post-reset-delays.patch
 	patches.suse/ASoC-tas2764-Fix-and-extend-FSYNC-polarity-handling.patch
