--- a/series.conf
+++ b/series.conf
@@ -35769,6 +35769,7 @@
 	patches.suse/loop-replace-kill_bdev-with-invalidate_bdev.patch
 	patches.suse/block-make-function-kill_bdev-static.patch
 	patches.suse/s390-qdio-fine-tune-slsb-update
+	patches.suse/s390-ptrace-pass-invalid-syscall-numbers-to-tracing
 	patches.suse/s390-qdio-reduce-slsb-writes-during-input-queue-processing
 	patches.suse/s390-qdio-clean-up-usage-of-qdio_data
 	patches.suse/s390-qdio-warn-about-unexpected-slsb-states
