dpaa2-eth: fix ethtool statistics (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7702,6 +7702,7 @@
 	patches.suse/ice-Don-t-put-stale-timestamps-in-the-skb.patch
 	patches.suse/iwlwifi-mvm-don-t-crash-on-invalid-rate-w-o-STA.patch
 	patches.suse/iwlwifi-fix-LED-dependencies.patch
+	patches.suse/dpaa2-eth-fix-ethtool-statistics.patch
 	patches.suse/netdevsim-Zero-initialize-memory-for-new-map-s-value.patch
 	patches.suse/net-packet-rx_owner_map-depends-on-pg_vec.patch
 	patches.suse/net-usb-lan78xx-add-Allied-Telesis-AT29M2-AF.patch
