Workaround for missing HD-audio on AMD platforms (bsc#1202492).

--- a/series.conf
+++ b/series.conf
@@ -1394,7 +1394,7 @@
 	########################################################
 	# Other drivers
 	########################################################
-
+	patches.suse/snd-hda-intel-iommu-workaround.patch
 
 	########################################################
 	# Debugging
