firmware: tegra: bpmp: Do only aligned access to IPC memory area (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13132,6 +13132,7 @@
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
 	patches.suse/soc-amlogic-Fix-refcount-leak-in-meson-secure-pwrc.c.patch
 	patches.suse/firmware-arm_scpi-Ensure-scpi_info-is-not-assigned-i.patch
+	patches.suse/firmware-tegra-bpmp-Do-only-aligned-access-to-IPC-me.patch
 	patches.suse/firmware-tegra-Fix-error-check-return-value-of-debug.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/soc-qcom-ocmem-Fix-refcount-leak-in-of_get_ocmem.patch
