objtool: Rework allocating stack_ops on decode (bsc#1202396).

--- a/series.conf
+++ b/series.conf
@@ -29975,6 +29975,7 @@
 	patches.suse/objtool-remove-check-preventing-branches-within-alternative.patch
 	patches.suse/objtool-uniquely-identify-alternative-instruction-groups.patch
 	patches.suse/objtool-fix-orc-vs-alternatives.patch
+	patches.suse/objtool-Rework-allocating-stack_ops-on-decode.patch
 	patches.suse/x86-speculation-change-fill_return_buffer-to-work-with-objtool.patch
 	patches.suse/objtool-allow-no-op-cfi-ops-in-alternatives.patch
 	patches.suse/capabilities-Introduce-CAP_PERFMON-to-kernel-and-use.patch
