--- a/series.conf
+++ b/series.conf
@@ -29976,6 +29976,7 @@
 	patches.suse/objtool-uniquely-identify-alternative-instruction-groups.patch
 	patches.suse/objtool-fix-orc-vs-alternatives.patch
 	patches.suse/objtool-Rework-allocating-stack_ops-on-decode.patch
+	patches.suse/objtool-Make-handle_insn_ops-unconditional.patch
 	patches.suse/x86-speculation-change-fill_return_buffer-to-work-with-objtool.patch
 	patches.suse/objtool-allow-no-op-cfi-ops-in-alternatives.patch
 	patches.suse/capabilities-Introduce-CAP_PERFMON-to-kernel-and-use.patch
