--- a/series.conf
+++ b/series.conf
@@ -13606,6 +13606,7 @@
 	patches.suse/iommu-vt-d-Use-IDA-interface-to-manage-iommu-sequenc.patch
 	patches.suse/iommu-vt-d-Refactor-iommu-information-of-each-domain.patch
 	patches.suse/iommu-vt-d-Remove-unnecessary-check-in-intel_iommu_a.patch
+	patches.suse/iommu-vt-d-Remove-global-g_iommus-array.patch
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
