--- a/series.conf
+++ b/series.conf
@@ -10897,6 +10897,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.0-patches.patch
 	patches.suse/iommu-ipmmu-vmsa-Check-for-error-num-after-setting-mask
 	patches.suse/iommu-iova-Improve-32-bit-free-space-estimate
+	patches.suse/iommu-vt-d-Remove-intel_iommu-domains
 	patches.suse/powerpc-xive-Export-XIVE-IPI-information-for-online-.patch
 	patches.suse/powerpc-add-link-stack-flush-mitigation-status-in-de.patch
 	patches.suse/powerpc-pseries-read-the-lpar-name-from-the-firmware.patch
