iommu/vt-d: Remove unnecessary check in intel_iommu_add() (bsc#1200301).

--- a/series.conf
+++ b/series.conf
@@ -13605,6 +13605,7 @@
 	patches.suse/iommu-vt-d-Acquiring-lock-in-domain-ID-allocation-helpers
 	patches.suse/iommu-vt-d-Use-IDA-interface-to-manage-iommu-sequenc.patch
 	patches.suse/iommu-vt-d-Refactor-iommu-information-of-each-domain.patch
+	patches.suse/iommu-vt-d-Remove-unnecessary-check-in-intel_iommu_a.patch
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
