--- a/series.conf
+++ b/series.conf
@@ -29978,6 +29978,7 @@
 	patches.suse/objtool-Rework-allocating-stack_ops-on-decode.patch
 	patches.suse/objtool-Make-handle_insn_ops-unconditional.patch
 	patches.suse/objtool-Remove-INSN_STACK.patch
+	patches.suse/objtool-Add-support-for-intra-function-calls.patch
 	patches.suse/x86-speculation-change-fill_return_buffer-to-work-with-objtool.patch
 	patches.suse/objtool-allow-no-op-cfi-ops-in-alternatives.patch
 	patches.suse/capabilities-Introduce-CAP_PERFMON-to-kernel-and-use.patch
