--- a/series.conf
+++ b/series.conf
@@ -8863,6 +8863,7 @@
 	patches.suse/scsi-libsas-Defer-works-of-new-phys-during-suspend.patch
 	patches.suse/scsi-hisi_sas-Keep-controller-active-between-ISR-of-phyup-and-the-event-being-processed.patch
 	patches.suse/scsi-libsas-Keep-host-active-while-processing-events.patch
+	patches.suse/scsi-hisi_sas-Use-autosuspend-for-the-host-controller.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-fixup-for-some-Yoga-15I.patch
 	patches.suse/ALSA-hda-realtek-Use-ALC285_FIXUP_HP_GPIO_LED-on-ano.patch
 	patches.suse/ALSA-hda-intel-More-comprehensive-PM-runtime-setup-f.patch
