ext4: remove EA inode entry from mbcache on inode eviction (bsc#1198971).

--- a/series.conf
+++ b/series.conf
@@ -13561,6 +13561,7 @@
 	patches.suse/0011-nvmet-auth-expire-authentication-sessions.patch
 	patches.suse/mbcache-don-t-reclaim-used-entries.patch
 	patches.suse/mbcache-add-functions-to-delete-entry-if-unused.patch
+	patches.suse/ext4-remove-EA-inode-entry-from-mbcache-on-inode-evi.patch
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
