blacklist.conf: rework and optimization ftrace commits, not bug fixes

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1580,3 +1580,6 @@ a54e04914c211b5678602a46b3ede5d82ec1327d # cleanup that breaks kABI
 cd8732cdcc37d7077c4fa2c966b748c0662b607e # cosmetic fix
 ef1dac6021cc8ec5de02ce31722bf26ac4ed5523 # breaks kABI, preparation commit for 262e6ae7081d ("modules: inherit TAINT_PROPRIETARY_MODULE") which is not taken
 262e6ae7081df304fc625cf368d5c2cbba2bb991 # not strictly needed, requires kABI-breaking ef1dac6021cc ("modules: return licensing information from find_symbol")
+fbf6c73c5b264c25484fa9f449b5546569fe11f0 # rework, not a bug
+a1326b17ac03a9012cb3d01e434aacb4d67a416c # rework, not a bug
+f1a54ae9af0da4d76239256ed640a93ab3aadac0 # rework, not a bug
