--- a/series.conf
+++ b/series.conf
@@ -52052,6 +52052,7 @@
 	patches.suse/ARM-9078-1-Add-warn-suppress-parameter-to-arm_gen_branch_link.patch
 	patches.suse/ARM-9079-1-ftrace-Add-MODULE_PLTS-support.patch
 	patches.suse/ARM-9091-1-Revert-mm-qsd8x50-Fix-incorrect-permission-faults.patch
+	patches.suse/ARM-9098-1-ftrace-MODULE_PLT-Fix-build-problem-without-DYNAMIC_FTRACE.patch
 	patches.suse/xen-sync-include-xen-interface-io-ring.h-with-Xen-s-.patch
 	patches.suse/x86-signal-detect-and-prevent-an-alternate-signal-stack-overflow.patch
 	patches.suse/x86-fpu-limit-xstate-copy-size-in-xstateregs_set.patch
