--- a/series.conf
+++ b/series.conf
@@ -52048,6 +52048,7 @@
 	patches.suse/fuse-ignore-pg_workingset-after-stealing.patch
 	patches.suse/fuse-check-connected-before-queueing-on-fpq-io.patch
 	patches.suse/fuse-reject-internal-errno.patch
+	patches.suse/ARM-9077-1-PLT-Move-struct-plt_entries-definition-to-header.patch
 	patches.suse/ARM-9091-1-Revert-mm-qsd8x50-Fix-incorrect-permission-faults.patch
 	patches.suse/xen-sync-include-xen-interface-io-ring.h-with-Xen-s-.patch
 	patches.suse/x86-signal-detect-and-prevent-an-alternate-signal-stack-overflow.patch
