--- a/series.conf
+++ b/series.conf
@@ -13229,6 +13229,7 @@
 	patches.suse/vmxnet3-add-support-for-large-passthrough-BAR-regist.patch
 	patches.suse/vmxnet3-add-support-for-out-of-order-rx-completion.patch
 	patches.suse/vmxnet3-add-command-to-set-ring-buffer-sizes.patch
+	patches.suse/vmxnet3-limit-number-of-TXDs-used-for-TSO-packet.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
