--- a/series.conf
+++ b/series.conf
@@ -13247,6 +13247,7 @@
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 	patches.suse/wifi-mac80211_hwsim-fix-race-condition-in-pending-pa.patch
 	patches.suse/wifi-mac80211_hwsim-add-back-erroneously-removed-cas.patch
+	patches.suse/vmxnet3-Record-queue-number-to-incoming-packets.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
