--- a/series.conf
+++ b/series.conf
@@ -5755,6 +5755,7 @@
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
+	patches.suse/net-vmxnet3-remove-multiple-false-checks-in-vmxnet3_.patch
 	patches.suse/bpftool-Remove-unused-includes-to-bpf-bpf_gen_intern.patch
 	patches.suse/bpftool-Remove-useless-include-to-perf-sys.h-from-ma.patch
 	patches.suse/selftests-bpf-Some-more-atomic-tests.patch
