--- a/series.conf
+++ b/series.conf
@@ -13224,6 +13224,7 @@
 	patches.suse/selftests-timers-valid-adjtimex-build-fix-for-newer-.patch
 	patches.suse/selftests-timers-clocksource-switch-fix-passing-erro.patch
 	patches.suse/btrfs-properly-flag-filesystem-with-btrfs_feature_incompat_big_metadata.patch
+	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
