--- a/series.conf
+++ b/series.conf
@@ -13231,6 +13231,7 @@
 	patches.suse/vmxnet3-add-command-to-set-ring-buffer-sizes.patch
 	patches.suse/vmxnet3-limit-number-of-TXDs-used-for-TSO-packet.patch
 	patches.suse/vmxnet3-use-ext1-field-to-indicate-encapsulated-pack.patch
+	patches.suse/vmxnet3-update-to-version-7.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
