net: vmxnet3: fix possible NULL pointer dereference in vmxnet3_rq_cleanup() (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -11834,6 +11834,7 @@
 	patches.suse/ARM-dts-aspeed-Add-video-engine-to-g6.patch
 	patches.suse/Revert-can-m_can-pci-use-custom-bit-timings-for-Elkh.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
+	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
 	patches.suse/nfc-pn533-Fix-buggy-cleanup-order.patch
 	patches.suse/pinctrl-mediatek-mt8365-fix-IES-control-pins.patch
