vmxnet3: switch from 'pci_' to 'dma_' API (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -982,6 +982,7 @@
 	patches.suse/rtw88-use-read_poll_timeout-instead-of-fixed-sleep.patch
 	patches.suse/rtw88-wow-build-wow-function-only-if-CONFIG_PM-is-on.patch
 	patches.suse/rtw88-wow-fix-size-access-error-of-probe-request.patch
+	patches.suse/vmxnet3-switch-from-pci_-to-dma_-API.patch
 	patches.suse/net-mellanox-switch-from-pci_-to-dma_-API.patch
 	patches.suse/cxgb4-improve-printing-NIC-information.patch
 	patches.suse/ethtool-add-two-coalesce-attributes-for-CQE-mode.patch
