--- a/series.conf
+++ b/series.conf
@@ -13257,6 +13257,7 @@
 	patches.suse/can-kvaser_usb_leaf-do-not-report-txerr-and-rxerr-du.patch
 	patches.suse/can-usb_8dev-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-error-specify-the-values-of-data-5.7-of-CAN-erro.patch
+	patches.suse/vmxnet3-Implement-ethtool-s-get_channels-command.patch
 	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
