--- a/series.conf
+++ b/series.conf
@@ -56655,6 +56655,7 @@
 	patches.suse/mbcache-add-functions-to-delete-entry-if-unused.patch
 	patches.suse/ext4-remove-EA-inode-entry-from-mbcache-on-inode-evi.patch
 	patches.suse/ext4-unindent-codeblock-in-ext4_xattr_block_set.patch
+	patches.suse/ext4-fix-race-when-reusing-xattr-blocks.patch
 	patches.suse/mm-memcontrol-fix-potential-oom_lock-recursion-deadlock.patch
 	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
