arm64: set UXN on swapper page tables (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13844,6 +13844,7 @@
 	# ARM
 	patches.suse/arm64-select-CPUMASK_OFFSTACK-if-NUMA.patch
 	patches.suse/arm64-dts-s32g2-add-USDHC-support.patch
+	patches.suse/arm64-set-UXN-on-swapper-page-tables.patch
 
 	########################################################
 	# Scheduler
