--- a/series.conf
+++ b/series.conf
@@ -9723,6 +9723,7 @@
 	patches.suse/cgroup-v1-Correct-privileges-check-in-release_agent-writes.patch
 	patches.suse/hwmon-Handle-failure-to-register-sensor-with-thermal.patch
 	patches.suse/hwmon-pmbus-Clear-pmbus-fault-warning-bits-after-rea.patch
+	patches.suse/selinux-fix-misuse-of-mutex_is_locked.patch
 	patches.suse/of-unittest-update-text-of-expected-warnings.patch
 	patches.suse/surface-surface3_power-Fix-battery-readings-on-batte.patch
 	patches.suse/io_uring-add-a-schedule-point-in-io_add_buffers.patch
