selinux: fix double free of cond_list on error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9346,6 +9346,7 @@
 	patches.suse/selftests-openat2-Skip-testcases-that-fail-with-EOPN.patch
 	patches.suse/selftests-skip-mincore.check_file_mmap-when-fs-lacks.patch
 	patches.suse/kselftest-Fix-vdso_test_abi-return-status.patch
+	patches.suse/selinux-fix-double-free-of-cond_list-on-error-paths.patch
 	patches.suse/net-amd-xgbe-Fix-skb-data-length-underflow.patch
 	patches.suse/selftests-nft_concat_range-add-test-for-reload-with-.patch
 	patches.suse/net-amd-xgbe-ensure-to-reset-the-tx_timer_active-fla.patch
