selinux: access superblock_security_struct in LSM blob way (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10242,6 +10242,7 @@
 	patches.suse/media-omap3isp-Use-struct_group-for-memcpy-region.patch
 	patches.suse/watch_queue-Fix-NULL-dereference-in-error-cleanup.patch
 	patches.suse/watch_queue-Actually-free-the-watch.patch
+	patches.suse/selinux-access-superblock_security_struct-in-LSM-blo.patch
 	patches.suse/LSM-general-protection-fault-in-legacy_parse_param.patch
 	patches.suse/cifs-fix-handlecache-and-multiuser.patch
 	patches.suse/Adjust-cifssb-maximum-read-size.patch
