selinux: fix memleak in security_read_state_kernel() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13214,6 +13214,7 @@
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/Documentation-dm-writecache-Render-status-list-as-li.patch
 	patches.suse/selftests-seccomp-Fix-compile-warning-when-CC-clang.patch
+	patches.suse/selinux-fix-memleak-in-security_read_state_kernel.patch
 	patches.suse/crypto-ccp-Use-kzalloc-for-sev-ioctl-interfaces-to-p.patch
 	patches.suse/crypto-sun8i-ss-fix-error-codes-in-allocate_flows.patch
 	patches.suse/crypto-sun8i-ss-fix-infinite-loop-in-sun8i_ss_setup_.patch
