selinux: fix bad cleanup on error in hashtab_duplicate() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11837,6 +11837,7 @@
 	patches.suse/dt-bindings-pinctrl-aspeed-g6-remove-FWQSPID-group.patch
 	patches.suse/ARM-dts-aspeed-g6-fix-SPI1-SPI2-quad-pin-group.patch
 	patches.suse/ARM-dts-aspeed-Add-video-engine-to-g6.patch
+	patches.suse/selinux-fix-bad-cleanup-on-error-in-hashtab_duplicat.patch
 	patches.suse/Revert-can-m_can-pci-use-custom-bit-timings-for-Elkh.patch
 	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/net-vmxnet3-fix-possible-NULL-pointer-dereference-in.patch
