selinux: use correct type for context length (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10245,6 +10245,7 @@
 	patches.suse/selinux-access-superblock_security_struct-in-LSM-blo.patch
 	patches.suse/selinux-check-return-value-of-sel_make_avc_files.patch
 	patches.suse/LSM-general-protection-fault-in-legacy_parse_param.patch
+	patches.suse/selinux-use-correct-type-for-context-length.patch
 	patches.suse/cifs-fix-handlecache-and-multiuser.patch
 	patches.suse/Adjust-cifssb-maximum-read-size.patch
 	patches.suse/cifs-we-do-not-need-a-spinlock-around-the-tree-access-during-umount.patch
