selinux: check return value of sel_make_avc_files (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10243,6 +10243,7 @@
 	patches.suse/watch_queue-Fix-NULL-dereference-in-error-cleanup.patch
 	patches.suse/watch_queue-Actually-free-the-watch.patch
 	patches.suse/selinux-access-superblock_security_struct-in-LSM-blo.patch
+	patches.suse/selinux-check-return-value-of-sel_make_avc_files.patch
 	patches.suse/LSM-general-protection-fault-in-legacy_parse_param.patch
 	patches.suse/cifs-fix-handlecache-and-multiuser.patch
 	patches.suse/Adjust-cifssb-maximum-read-size.patch
