--- a/series.conf
+++ b/series.conf
@@ -56081,6 +56081,7 @@
 	patches.suse/powerpc-64s-Add-CPU_FTRS_POWER9_DD2_2-to-CPU_FTRS_AL.patch
 	patches.suse/powerpc-64s-Add-CPU_FTRS_POWER10-to-ALWAYS-mask.patch
 	patches.suse/powerpc-Enable-the-DAWR-on-POWER9-DD2.3-and-above.patch
+	patches.suse/msft-hv-2574-PCI-hv-Fix-multi-MSI-to-allow-more-than-one-MSI-vect.patch
 	patches.suse/msft-hv-2588-PCI-hv-Do-not-set-PCI_COMMAND_MEMORY-to-reduce-VM-bo.patch
 	patches.suse/Input-sparcspkr-fix-refcount-leak-in-bbc_beep_probe.patch
 	patches.suse/Input-stmfts-do-not-leave-device-disabled-in-stmfts_.patch
