PCI: hv: Only reuse existing IRTE allocation for Multi-MSI (bsc#1200845).

--- a/series.conf
+++ b/series.conf
@@ -57021,6 +57021,7 @@
 	########################################################
 	# Virtualization
 	########################################################
+	patches.suse/suse-hv-pci-multi-msi-reuse-IRTE.patch
 	patches.suse/suse-hv-mana-netdev_lockdep_set_classes.patch
 	patches.suse/suse-hv-guest-os-id.patch
 	patches.suse/0001-kvm-Reintroduce-nopvspin-kernel-parameter.patch
