--- a/series.conf
+++ b/series.conf
@@ -54613,6 +54613,7 @@
 	patches.suse/PCI-Add-function-1-DMA-alias-quirk-for-Marvell-88SE9.patch
 	patches.suse/PCI-aardvark-Clear-all-MSIs-at-setup.patch
 	patches.suse/PCI-dwc-Do-not-remap-invalid-res.patch
+	patches.suse/msft-hv-2510-PCI-hv-Make-the-code-arch-neutral-by-adding-arch-spe.patch
 	patches.suse/PCI-mvebu-Check-for-errors-from-pci_bridge_emul_init.patch
 	patches.suse/PCI-mvebu-Do-not-modify-PCI-IO-type-bits-in-conf_wri.patch
 	patches.suse/PCI-mvebu-Fix-support-for-PCI_EXP_DEVCTL-on-emulated.patch
