proc: fix dentry/inode overinstantiating under /proc/${pid}/net (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12303,6 +12303,7 @@
 	patches.suse/pipe-Fix-missing-lock-in-pipe_resize_ring.patch
 	patches.suse/list-fix-a-data-race-around-ep-rdllist.patch
 	patches.suse/fat-add-ratelimit-to-fat-_ent_bread.patch
+	patches.suse/proc-fix-dentry-inode-overinstantiating-under-proc-p.patch
 	patches.suse/gen_init_cpio-fix-short-read-file-handling.patch
 	patches.suse/tty-fix-deadlock-caused-by-calling-printk-under-tty_.patch
 	patches.suse/mm-page_alloc-always-attempt-to-allocate-at-least-one-page-during-bulk-allocation.patch
