platform/x86: pmc_atom: Match all Lex BayTrail boards with critclk_systems DMI table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13478,6 +13478,7 @@
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
 	patches.suse/HID-amd_sfh-Handle-condition-of-no-sensors.patch
 	patches.suse/platform-chrome-cros_ec-Always-expose-last-resume-re.patch
+	patches.suse/platform-x86-pmc_atom-Match-all-Lex-BayTrail-boards-.patch
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
