openvswitch: Fix setting ipv6 fields causing hw csum failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9767,6 +9767,7 @@
 	patches.suse/Revert-xen-netback-remove-hotplug-status-once-it-has.patch
 	patches.suse/Revert-xen-netback-Check-for-hotplug-status-existenc.patch
 	patches.suse/net-smc-Use-a-mutex-for-locking-struct-smc_pnettable
+	patches.suse/openvswitch-Fix-setting-ipv6-fields-causing-hw-csum-.patch
 	patches.suse/Revert-i40e-Fix-reset-bw-limit-when-DCB-enabled-with.patch
 	patches.suse/ping-remove-pr_err-from-ping_lookup.patch
 	patches.suse/net-mv643xx_eth-process-retval-from-of_get_mac_addre.patch
