net: openvswitch: fix leak of nested actions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11316,6 +11316,7 @@
 	patches.suse/bnxt_en-Prevent-XDP-redirect-from-running-when-stopp.patch
 	patches.suse/sfc-Do-not-free-an-empty-page_ring.patch
 	patches.suse/net-openvswitch-don-t-send-internal-clone-attribute-.patch
+	patches.suse/net-openvswitch-fix-leak-of-nested-actions.patch
 	patches.suse/net-sfc-fix-using-uninitialized-xdp-tx_queue.patch
 	patches.suse/net-axienet-setup-mdio-unconditionally.patch
 	patches.suse/net-phy-mscc-miim-reject-clause-45-register-accesses.patch
