--- a/series.conf
+++ b/series.conf
@@ -11209,6 +11209,7 @@
 	patches.suse/crypto-stm32-fix-reference-leak-in-stm32_crc_remove.patch
 	patches.suse/crypto-x86-chacha20-Avoid-spurious-jumps-to-other-fu.patch
 	patches.suse/crypto-x86-poly1305-fixup-sls.patch
+	patches.suse/openvswitch-Fixed-nd-target-mask-field-in-the-flow-d.patch
 	patches.suse/ax25-fix-UAF-bug-in-ax25_send_control.patch
 	patches.suse/ax25-Fix-UAF-bugs-in-ax25-timers.patch
 	patches.suse/xsk-Do-not-write-NULL-in-SW-ring-at-allocation-failu.patch
