--- a/series.conf
+++ b/series.conf
@@ -12765,6 +12765,7 @@
 	patches.suse/net-phy-smsc-Disable-Energy-Detect-Power-Down-in-int.patch
 	patches.suse/selftests-netfilter-correct-PKTGEN_SCRIPT_PATHS-in-n.patch
 	patches.suse/virtio_net-fix-xdp_rxq_info-bug-after-suspend-resume.patch
+	patches.suse/net-openvswitch-fix-parsing-of-nw_proto-for-IPv6-fra.patch
 	patches.suse/tracing-kprobes-Check-whether-get_kretprobe-returns-.patch
 	patches.suse/ata-libata-add-qc-flags-in-ata_qc_complete_template-.patch
 	patches.suse/drm-sun4i-Fix-crash-during-suspend-after-component-b.patch
