--- a/series.conf
+++ b/series.conf
@@ -11315,6 +11315,7 @@
 	patches.suse/bnxt_en-reserve-space-inside-receive-page-for-skb_sh.patch
 	patches.suse/bnxt_en-Prevent-XDP-redirect-from-running-when-stopp.patch
 	patches.suse/sfc-Do-not-free-an-empty-page_ring.patch
+	patches.suse/net-openvswitch-don-t-send-internal-clone-attribute-.patch
 	patches.suse/net-sfc-fix-using-uninitialized-xdp-tx_queue.patch
 	patches.suse/net-axienet-setup-mdio-unconditionally.patch
 	patches.suse/net-phy-mscc-miim-reject-clause-45-register-accesses.patch
