Revert "usb: typec: ucsi: add a common function ucsi_unregister_connectors()" (bsc#120238).

--- a/series.conf
+++ b/series.conf
@@ -1382,6 +1382,7 @@
 	########################################################
 	# USB
 	########################################################
+	patches.suse/Revert-usb-typec-ucsi-add-a-common-function-ucsi_unr.patch
 
 	########################################################
 	# Input
