drm/amd/display: Check correct bounds for stream encoder instances for DCN303 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13752,6 +13752,7 @@
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
+	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
 
 	########################################################
 	# end of sorted patches
