--- a/series.conf
+++ b/series.conf
@@ -13758,6 +13758,7 @@
 	patches.suse/ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ASoC-tas2770-Drop-conflicting-set_bias_level-power-s.patch
+	patches.suse/ASoC-tas2770-Fix-handling-of-mute-unmute.patch
 
 	########################################################
 	# end of sorted patches
