ASoC: codec: tlv320aic32x4: fix mono playback via I2S (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13759,6 +13759,7 @@
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ASoC-tas2770-Drop-conflicting-set_bias_level-power-s.patch
 	patches.suse/ASoC-tas2770-Fix-handling-of-mute-unmute.patch
+	patches.suse/ASoC-codec-tlv320aic32x4-fix-mono-playback-via-I2S.patch
 
 	########################################################
 	# end of sorted patches
