drm/i915/gt: Skip TLB invalidations once wedged (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13749,6 +13749,7 @@
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
+	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 
 	########################################################
 	# end of sorted patches
