ALSA: info: Fix llseek return value when using callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13760,6 +13760,7 @@
 	patches.suse/ASoC-tas2770-Drop-conflicting-set_bias_level-power-s.patch
 	patches.suse/ASoC-tas2770-Fix-handling-of-mute-unmute.patch
 	patches.suse/ASoC-codec-tlv320aic32x4-fix-mono-playback-via-I2S.patch
+	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
 
 	########################################################
 	# end of sorted patches
