drm/meson: Fix refcount bugs in meson_vpu_has_available_connectors() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13750,6 +13750,7 @@
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
+	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 
 	########################################################
 	# end of sorted patches
