ASoC: tas2770: Allow mono streams (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13756,6 +13756,7 @@
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Set-correct-FSYNC-polarity.patch
+	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 
 	########################################################
 	# end of sorted patches
