--- a/series.conf
+++ b/series.conf
@@ -13751,6 +13751,7 @@
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
+	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
 
 	########################################################
 	# end of sorted patches
