--- a/series.conf
+++ b/series.conf
@@ -13755,6 +13755,7 @@
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
+	patches.suse/ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 
 	########################################################
 	# end of sorted patches
