drm/amdgpu: remove useless condition in amdgpu_job_stop_all_jobs_on_sched() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13753,6 +13753,7 @@
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
+	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
 
 	########################################################
 	# end of sorted patches
