ASoC: tas2770: Drop conflicting set_bias_level power setting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13757,6 +13757,7 @@
 	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 	patches.suse/ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
+	patches.suse/ASoC-tas2770-Drop-conflicting-set_bias_level-power-s.patch
 
 	########################################################
 	# end of sorted patches
