ALSA: hda/realtek: Add quirk for Clevo NS50PU, NS70PU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13761,6 +13761,7 @@
 	patches.suse/ASoC-tas2770-Fix-handling-of-mute-unmute.patch
 	patches.suse/ASoC-codec-tlv320aic32x4-fix-mono-playback-via-I2S.patch
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS70PU.patch
 
 	########################################################
 	# end of sorted patches
