--- a/series.conf
+++ b/series.conf
@@ -12151,6 +12151,7 @@
 	patches.suse/ALSA-usb-audio-Add-quirk-bits-for-enabling-disabling.patch
 	patches.suse/ALSA-usb-audio-Move-generic-implicit-fb-quirk-entrie.patch
 	patches.suse/ALSA-pcm-Check-for-null-pointer-of-pointer-substream.patch
+	patches.suse/ALSA-hda-conexant-add-a-new-hda-codec-SN6140.patch
 	patches.suse/ALSA-usb-audio-Workaround-for-clock-setup-on-TEAC-de.patch
 	patches.suse/ALSA-usb-audio-Add-missing-ep_idx-in-fixed-EP-quirks.patch
 	patches.suse/ALSA-ctxfi-Add-SB046x-PCI-ID.patch
