xfs: remove incorrect ASSERT in xfs_rename (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7461,6 +7461,7 @@
 	patches.suse/cifs-wait-for-tcon-resource_id-before-getting-fscache-super.patch
 	patches.suse/cifs-add-server-conn_id-to-fscache-client-cookie.patch
 	patches.suse/cifs-avoid-use-of-dstaddr-as-key-for-fscache-client-cookie.patch
+	patches.suse/xfs-remove-incorrect-ASSERT-in-xfs_rename.patch
 	patches.suse/KVM-x86-pmu-Fix-reserved-bits-for-AMD-PerfEvtSeln-re.patch
 	patches.suse/KVM-VMX-Set-failure-code-in-prepare_vmcs02.patch
 	patches.suse/KVM-SEV-Return-appropriate-error-codes-if-SEV-ES-scr.patch
