--- a/series.conf
+++ b/series.conf
@@ -12889,6 +12889,7 @@
 	patches.suse/drivers-cpufreq-Add-missing-of_node_put-in-qoriq-cpu.patch
 	patches.suse/cpufreq-pmac32-cpufreq-Fix-refcount-leak-bug.patch
 	patches.suse/SUNRPC-Fix-READ_PLUS-crasher.patch
+	patches.suse/xfs-prevent-a-UAF-when-log-IO-errors-race-with-unmou.patch
 	patches.suse/soc-ixp4xx-npe-Fix-unused-match-warning.patch
 	patches.suse/ARM-at91-pm-use-proper-compatible-for-sama5d2-s-rtc.patch
 	patches.suse/ARM-at91-pm-use-proper-compatibles-for-sam9x60-s-rtc.patch
