--- a/series.conf
+++ b/series.conf
@@ -12262,6 +12262,7 @@
 	patches.suse/swiotlb-max-mapping-size-takes-min-align-mask-into-a.patch
 	patches.suse/inotify-show-inotify-mask-flags-in-proc-fdinfo.patch
 	patches.suse/fsnotify-fix-wrong-lockdep-annotations.patch
+	patches.suse/xfs-revert-xfs-actually-bump-warning-counts-when-we-.patch
 	patches.suse/ARM-hisi-Add-missing-of_node_put-after-of_find_compa.patch
 	patches.suse/ARM-dts-ox820-align-interrupt-controller-node-name-w.patch
 	patches.suse/ARM-dts-socfpga-align-interrupt-controller-node-name.patch
