xfs: reorder iunlink remove operation in xfs_ifree (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11576,6 +11576,7 @@
 	patches.suse/zonefs-Clear-inode-information-flags-on-inode-creati.patch
 	patches.suse/zonefs-Fix-management-of-open-zones.patch
 	patches.suse/hex2bin-fix-access-beyond-string-end.patch
+	patches.suse/xfs-reorder-iunlink-remove-operation-in-xfs_ifree.patch
 	patches.suse/platform-x86-asus-wmi-Potential-buffer-overflow-in-a.patch
 	patches.suse/platform-x86-asus-wmi-Fix-driver-not-binding-when-fa.patch
 	patches.suse/platform-x86-intel-sdsi-Handle-leaky-bucket.patch
