xfs: only bother with sync_filesystem during readonly remount (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9854,6 +9854,7 @@
 	patches.suse/RDMA-ib_srp-Fix-a-deadlock.patch
 	patches.suse/RDMA-cma-Do-not-change-route.addr.src_addr-outside-s.patch
 	patches.suse/configfs-fix-a-race-in-configfs_-un-register_subsyst.patch
+	patches.suse/xfs-only-bother-with-sync_filesystem-during-readonly.patch
 	patches.suse/selftest-vm-fix-map_fixed_noreplace-test-failure.patch
 	patches.suse/selftests-memfd-clean-up-mapping-in-mfd_fail_write.patch
 	patches.suse/tracing-Dump-stacktrace-trigger-to-the-corresponding-instance.patch
