--- a/series.conf
+++ b/series.conf
@@ -8648,6 +8648,7 @@
 	patches.suse/btrfs-respect-the-max-size-in-the-header-when-activa.patch
 	patches.suse/xfs-only-run-COW-extent-recovery-when-there-are-no-l.patch
 	patches.suse/xfs-check-sb_meta_uuid-for-dabuf-buffer-recovery.patch
+	patches.suse/xfs-prevent-UAF-in-xfs_log_item_in_current_chkpt.patch
 	patches.suse/ext4-destroy-ext4_fc_dentry_cachep-kmemcache-on-modu.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
