xfs: fold perag loop iteration logic into helper function (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5837,6 +5837,7 @@
 	patches.suse/gfs2-Cancel-remote-delete-work-asynchronously.patch
 	patches.suse/gfs2-Fix-glock_hash_walk-bugs.patch
 	patches.suse/xfs-use-kmem_cache_free-for-kmem_cache-objects.patch
+	patches.suse/xfs-fold-perag-loop-iteration-logic-into-helper-func.patch
 	patches.suse/xfs-punch-out-data-fork-delalloc-blocks-on-COW-write.patch
 	patches.suse/workqueue-make-sysfs-of-unbound-kworker-cpumask-more.patch
 	patches.suse/cgroup-Make-rebind_subsystems-disable-v2-controllers.patch
