--- a/series.conf
+++ b/series.conf
@@ -5839,6 +5839,7 @@
 	patches.suse/xfs-use-kmem_cache_free-for-kmem_cache-objects.patch
 	patches.suse/xfs-fold-perag-loop-iteration-logic-into-helper-func.patch
 	patches.suse/xfs-rename-the-next_agno-perag-iteration-variable.patch
+	patches.suse/xfs-terminate-perag-iteration-reliably-on-agcount.patch
 	patches.suse/xfs-punch-out-data-fork-delalloc-blocks-on-COW-write.patch
 	patches.suse/workqueue-make-sysfs-of-unbound-kworker-cpumask-more.patch
 	patches.suse/cgroup-Make-rebind_subsystems-disable-v2-controllers.patch
