--- a/series.conf
+++ b/series.conf
@@ -10834,6 +10834,7 @@
 	patches.suse/drm-i915-gem-add-missing-boundary-check-in-vm_access.patch
 	patches.suse/drm-i915-display-Fix-HPD-short-pulse-handling-for-eD.patch
 	patches.suse/drm-amd-display-Add-pstate-verification-and-recovery.patch
+	patches.suse/xfs-use-setattr_copy-to-set-vfs-inode-attributes.patch
 	patches.suse/RDMA-core-Set-MR-type-in-ib_reg_user_mr.patch
 	patches.suse/RDMA-rxe-Check-the-last-packet-by-RXE_END_MASK.patch
 	patches.suse/IB-cma-Allow-XRC-INI-QPs-to-set-their-local-ACK-time.patch
