--- a/series.conf
+++ b/series.conf
@@ -1215,6 +1215,7 @@
 	patches.kernel.org/5.19.3-005-btrfs-raid56-don-t-trust-any-cached-sector-in-.patch
 	patches.kernel.org/5.19.3-006-kexec-KEYS-make-the-code-in-bzImage64_verify_s.patch
 	patches.kernel.org/5.19.3-007-arm64-kexec_file-use-more-system-keyrings-to-v.patch
+	patches.kernel.org/5.19.3-008-Linux-5.19.3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
