arm64: kexec_file: use more system keyrings to verify kernel image signature (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1214,6 +1214,7 @@
 	patches.kernel.org/5.19.3-004-btrfs-only-write-the-sectors-in-the-vertical-s.patch
 	patches.kernel.org/5.19.3-005-btrfs-raid56-don-t-trust-any-cached-sector-in-.patch
 	patches.kernel.org/5.19.3-006-kexec-KEYS-make-the-code-in-bzImage64_verify_s.patch
+	patches.kernel.org/5.19.3-007-arm64-kexec_file-use-more-system-keyrings-to-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
