tee: add overflow check in register_shm_helper() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1209,6 +1209,7 @@
 	patches.kernel.org/5.19.2-1158-vxlan-Use-ip_tunnel_key-flow-flags-in-route-l.patch
 	patches.kernel.org/5.19.2-1159-Linux-5.19.2.patch
 	patches.kernel.org/5.19.3-001-Revert-mm-kfence-apply-kmemleak_ignore_phys-on.patch
+	patches.kernel.org/5.19.3-002-tee-add-overflow-check-in-register_shm_helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
