--- a/series.conf
+++ b/series.conf
@@ -1211,6 +1211,7 @@
 	patches.kernel.org/5.19.3-001-Revert-mm-kfence-apply-kmemleak_ignore_phys-on.patch
 	patches.kernel.org/5.19.3-002-tee-add-overflow-check-in-register_shm_helper.patch
 	patches.kernel.org/5.19.3-003-net_sched-cls_route-disallow-handle-of-0.patch
+	patches.kernel.org/5.19.3-004-btrfs-only-write-the-sectors-in-the-vertical-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
