Revert "mm: kfence: apply kmemleak_ignore_phys on early allocated pool" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1208,6 +1208,7 @@
 	patches.kernel.org/5.19.2-1157-geneve-Use-ip_tunnel_key-flow-flags-in-route-.patch
 	patches.kernel.org/5.19.2-1158-vxlan-Use-ip_tunnel_key-flow-flags-in-route-l.patch
 	patches.kernel.org/5.19.2-1159-Linux-5.19.2.patch
+	patches.kernel.org/5.19.3-001-Revert-mm-kfence-apply-kmemleak_ignore_phys-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
