kexec, KEYS: make the code in bzImage64_verify_sig generic (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1213,6 +1213,7 @@
 	patches.kernel.org/5.19.3-003-net_sched-cls_route-disallow-handle-of-0.patch
 	patches.kernel.org/5.19.3-004-btrfs-only-write-the-sectors-in-the-vertical-s.patch
 	patches.kernel.org/5.19.3-005-btrfs-raid56-don-t-trust-any-cached-sector-in-.patch
+	patches.kernel.org/5.19.3-006-kexec-KEYS-make-the-code-in-bzImage64_verify_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
