i2c: imx: Make sure to unregister adapter on remove() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13768,6 +13768,7 @@
 	patches.suse/mmc-meson-gx-Fix-an-error-handling-path-in-meson_mmc.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
+	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 
 	########################################################
 	# end of sorted patches
