mmc: pxamci: Fix another error handling path in pxamci_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13764,6 +13764,7 @@
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS70PU.patch
 	patches.suse/mmc-pxamci-Fix-an-error-handling-path-in-pxamci_prob.patch
+	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 
 	########################################################
 	# end of sorted patches
