mmc: meson-gx: Fix an error handling path in meson_mmc_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13765,6 +13765,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS70PU.patch
 	patches.suse/mmc-pxamci-Fix-an-error-handling-path-in-pxamci_prob.patch
 	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
+	patches.suse/mmc-meson-gx-Fix-an-error-handling-path-in-meson_mmc.patch
 
 	########################################################
 	# end of sorted patches
