ata: libata-eh: Add missing command name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13766,6 +13766,7 @@
 	patches.suse/mmc-pxamci-Fix-an-error-handling-path-in-pxamci_prob.patch
 	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 	patches.suse/mmc-meson-gx-Fix-an-error-handling-path-in-meson_mmc.patch
+	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 
 	########################################################
 	# end of sorted patches
