net: stmmac: fix off-by-one error in sanity check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5172,6 +5172,7 @@
 	patches.suse/net-dsa-rtl8366rb-Fix-off-by-one-bug.patch
 	patches.suse/net-dsa-rtl8366-Fix-a-bug-in-deleting-VLANs.patch
 	patches.suse/net-mlx5e-check-return-value-of-rhashtable_init.patch
+	patches.suse/net-stmmac-fix-off-by-one-error-in-sanity-check.patch
 	patches.suse/octeontx2-af-Reset-PTP-config-in-FLR-handler.patch
 	patches.suse/octeontx2-af-cn10k-RPM-hardware-timestamp-configurat.patch
 	patches.suse/octeontx2-af-Use-ptp-input-clock-info-from-firmware-.patch
